# lib-level-2

./: CMakeLists.txt  conanfile.txt
cpp/: lib2.h
